# mdqy

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  crate.yml  release.yml  scoop.yml
benches/: criterion.rs
docs/: README.md  architecture.md  language.md  quickstart.md  selectors.md  transforms.md
examples/: demo.md  demo.tape  export_schema.rs  gen_completions.rs  gen_manpage.rs
scripts/: stress.sh
src/: aggregate.rs  analyze.rs  ast.rs  builtins.rs  cli.rs  error.rs  eval.rs  events.rs  expr.rs  lex.rs  lib.rs  mutate.rs  parse.rs  stream.rs  value.rs  walk.rs
src/emit/: json.rs  md.rs  mod.rs  tty.rs
tests/: cli.rs  json_emit.rs  proptest_smoke.proptest-regressions  proptest_smoke.rs  queries.rs  quickstart.rs
tests/fixtures/: stress.md  table.md  tiny.md
tests/fixtures/quickstart/: guide.md
tests/fixtures/quickstart/docs/: a.md  b.md
wix/: main.wxs
