[package]
name = "mdqy"
version = "0.1.1-rc.1"
edition = "2021"
rust-version = "1.83"
license = "MPL-2.0"
description = "jq for markdown: query and transform Markdown with a hybrid selector and jq DSL"
homepage = "https://github.com/pawelb0/mdqy"
repository = "https://github.com/pawelb0/mdqy"
authors = ["pawelb"]
readme = "README.md"
keywords = ["markdown", "jq", "query", "cli", "pulldown-cmark"]
categories = ["command-line-utilities", "text-processing"]

[package.metadata.wix]
upgrade-guid = "EC01F7DE-BD69-4878-9A58-510D77943F5A"
path-guid = "9B0DC815-B44E-49D5-BE13-68B921934502"
license = false
eula = false

[workspace]

[features]
default = []
tty = ["dep:mdcat", "dep:syntect"]
schema-export = ["dep:schemars"]
watch = ["dep:notify"]

[dependencies]
pulldown-cmark = { version = "0.13.3", default-features = false, features = ["simd"] }
pulldown-cmark-to-cmark = "22"
clap = { version = "4.6.1", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = { version = "1.12.3", default-features = false, features = ["std", "unicode-perl"] }
ignore = "0.4.23"
# Unified diff for --dry-run output.
similar = { version = "2.6", features = ["inline"] }
anyhow = "1"
thiserror = "2.0.18"
# Anchor slugs for headings.
slug = "0.1"
# Atomic in-place writes under -U.
tempfile = "3"
# Frontmatter parsing.
serde_yaml = "0.9"
toml = "0.8"
# Per-file parallelism under --workers.
rayon = "1.10"

mdcat = { package = "mdcat-ng", version = "0.2", optional = true, default-features = false, features = ["image-processing"] }
syntect = { version = "5.3.0", optional = true, default-features = false, features = ["parsing", "regex-fancy", "default-syntaxes"] }
schemars = { version = "0.8", optional = true }
notify = { version = "7", optional = true, default-features = false, features = ["macos_kqueue"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
clap_complete = "4"
clap_mangen = "0.2"
proptest = { version = "1", default-features = false, features = ["std"] }

[[bench]]
name = "criterion"
harness = false

[profile.release]
strip = "symbols"
lto = "thin"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Style-only; not worth the churn.
doc_markdown = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow"
match_same_arms = "allow"
similar_names = "allow"
too_many_lines = "allow"
# Numeric conversions are deliberate and narrow (array indices, heading levels).
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
